refactor: Migrate from H2 to PostgreSQL and resolve hardcoded security roles
- Swapped H2 test DB for PostgreSQL using Testcontainers
- Refactored GlobalRecordController to use domain permissions instead of hardcoded hasRole
- Fixed authorization on DQ endpoints (DqRecommendationController, DataProfilingController) to use dq:read
- Provided missing SecurityUtils and WorkflowResolver mocks for unit tests
- Added k8s warning to README